[project]
name = "handson-ml3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform==1.36.2",
    "google-cloud-storage==2.13.0",
    "graphviz==0.20.*",
    "gymnasium[atari,classic-control]>=1.1.0",
    "ipython==8.17.*",
    "ipywidgets==8.1.*",
    "joblib==1.3.*",
    "jupyterlab==4.0.*",
    "keras-core>=0.1.7",
    "keras-tuner==1.4.6",
    "matplotlib==3.8.*",
    "nbdime==3.2.*",
    "nltk==3.8.*",
    "numexpr==2.8.*",
    "numpy==1.26.*",
    "pandas==2.1.*",
    "pillow==10.1.*",
    "pydot==1.4.*",
    "requests==2.31.*",
    "scikit-learn==1.3.*",
    "scipy==1.11.*",
    "statsmodels==0.14.*",
    "tensorboard==2.14.1",
    "tensorboard-plugin-profile==2.14.0",
    "tensorflow==2.14.0",
    "tensorflow-datasets==4.9.3",
    "tensorflow-hub==0.15.0",
    "tensorflow-serving-api==2.14.0",
    "tqdm==4.66.*",
    "transformers==4.35.0",
    "urlextract==1.8.0",
    "widgetsnbextension==4.0.*",
    "xgboost==1.7.*",
]

